[bugfix] AddressEdit: missing border (#1800)

--- a/packages/vant-css/src/address-edit.css
+++ b/packages/vant-css/src/address-edit.css
@@ -28,6 +28,8 @@
   }
 
   &-detail {
+    padding: 0;
+
     &__finish {
       color: $blue;
       font-size: 12px;
